# Rescue-Major

./: .gitignore  README.md  launch.sh  requirements.txt  requirements_lib.txt  requirements_python.txt  setup.bash  setup.sh  setup_services.sh
cloudfare/: cloudflared_config.yml  update_dns.service  update_dns.sh
docs/: API_teleoperation.md
install/: install_ros2_humble.sh  local_setup.sh  setup.sh
launch_scripts/: camera.sh  hardware.sh  moveit.sh  ros_server.sh  user_server.sh  vision.sh
log/: latest_build
services/: robot@.service  robotSystem.target
setup/: install_ros2.sh  ros_ubuntu_version.sh  setup_libraries.sh
setup/communication/scripts/: communication_client.html
workspace/: compile.bash  compile.sh  launch.bash  launch.sh  launch_mapping.sh  mapping.rviz  monitor.sh  normal.rviz  requirements.txt  test_launch.sh
workspace/GUI/: package.xml  setup.py
workspace/GUI/GUI/: client.js  com_client.js  keyboard_keymap.json  server.py
workspace/GUI/install/: local_setup.sh  setup.sh
workspace/GUI/log/: latest_build
workspace/communication/: CMakeLists.txt
workspace/communication/install/: local_setup.sh  setup.sh
workspace/communication/log/: latest_build
workspace/communication/scripts/: base_server.py  base_socket.py  client_dummy.py  com_vars.json  command_server.py  sub_lector.py
workspace/extra/arduino/: information.txt
workspace/hardware/: CMakeLists.txt  package.xml  setup.py
workspace/hardware/hardware/: motor_node.py
workspace/install/: local_setup.sh  setup.sh
workspace/log/: latest_build  latest_list
workspace/microcontrollers/: package.xml  setup.cfg  setup.py
workspace/microcontrollers/microcontrollers/: node_arduino.py
workspace/src/aesir_moveit_config/: .setup_assistant  CMakeLists.txt  README.md  aesir_plugin.xml  package.xml
workspace/src/aesir_moveit_config/config/: custom_arm.ros2_control.xacro  custom_arm.servo.yaml  ros2_controllers.yaml
workspace/src/aesir_moveit_config/launch/: bringup.launch.py  bringup_controllers.launch.py  commander.launch.py  demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  servo_teleop.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
workspace/src/aesir_moveit_config/scripts/: test_teleop.py
workspace/src/aesir_robot_description/: CMakeLists.txt
workspace/src/arm_moveit_config/: CMakeLists.txt  README.md  aesir_plugin.xml  package.xml
workspace/src/hardware/: CMakeLists.txt  README.md  package.xml
workspace/src/hardware/config/: hardware.yaml
workspace/src/hardware/include/: bridge_transport.hpp  can_transport.hpp  commands.hpp  crc.hpp  diagnostics.hpp  hardware_driver_node.hpp  i2c_transport.hpp  protocol_handler.hpp  protocol_handler_i2c.hpp  ros_node.hpp  serial_mux.hpp  serial_transport.hpp  tuple_utils.hpp
workspace/src/hardware/include/transport/: bridge_transport.hpp  can_iface_manager.hpp  can_transport.hpp  i2c_transport.hpp  serial_iface_manager.hpp  serial_mux.hpp  serial_transport.hpp  transport.hpp
workspace/src/hardware/include/utils/: crc.hpp  diagnostics.hpp  logger.hpp  tuple_utils.hpp
workspace/src/hardware/launch/: hardware.launch.py
workspace/src/hardware/msg/: JointControl.msg
workspace/src/hardware/scripts/: README.md  joint_mux.py  jointjog_mux.py  motor_node.py  serial_sender.py
workspace/src/hardware/src/: class_fail.cpp  dc_motors.cpp
workspace/src/mapping/: CMakeLists.txt  launch_debug_mode.sh  requirements.txt  setup_mapping.sh  setup_yolo_oakd.sh
workspace/src/mapping/launch/: camera_config.yaml  depthai_test.launch.py  mapeo_general.py  mapping_tmr.py
workspace/src/mapping/scripts/: landmark_tf_publisher.py  object_detection_node.py
workspace/src/mapping/yolo_training/: README.md
workspace/src/mapping/yolo_training/configs/: baby.yaml  backpack.yaml  dataset.yaml  fire_extinguisher.yaml  gas_tank.yaml  hard_hat.yaml  hazmat.yaml  propane_tank.yaml  victim.yaml
workspace/src/mapping/yolo_training/runs/aesir_v23/: best.json
workspace/src/navigation/: CMakeLists.txt  package.xml
workspace/src/robot_moveit_config/: CMakeLists.txt  README.md  package.xml
workspace/src/teleoperation/: CMakeLists.txt  Robot_API.md  Teleoperation.md  Web_communication.md  package.xml
workspace/src/teleoperation/GUI/: camera_layouts.js  client.js  codigo.js  com_client.js  config_modal.js  controller_keymap.json  dynamic_cameras.js  estilos.css  feedback.html  index.html  input_mapper.html  keyboard_keymap.json  keymaps.json  keys_map_controller.json  keys_map_keyboard.json  p2.html  rosbridge_api.js  theme_manager.js  themes.css  video_test.js
workspace/src/teleoperation/launch/: teleoperation.launch.py
workspace/src/teleoperation/scripts/: audio_reproducer.py  audio_system.py  command_server.py  media_tracks.py  server.py  server_rtc.py  webrtc_manager.py
workspace/src/teleoperation/src/: command_server.cpp
workspace/src/vision/: CMakeLists.txt  README.md  package.xml
workspace/src/vision/config/: vision_cameras.yaml
workspace/src/vision/launch/: apriltag.launch.py  apriltag_on_cpu.launch.py  vision.launch.py
workspace/src/vision/scripts/: kalman_tracker.py  sensors_master.py
workspace/src/vision/src/: video_stream.cpp
workspace/teleoperation/: CMakeLists.txt  package.xml  setup.cfg  setup.py
workspace/teleoperation/GUI/: com_client.js  keyboard_keymap.json
workspace/vision/: CMakeLists.txt  package.xml
workspace/vision/sensores/: package.xml  setup.py
workspace/vision/sensores/install/: local_setup.sh  setup.ps1  setup.sh
workspace/vision/sensores/install/sensores/lib/sensores/: qr
workspace/vision/sensores/install/sensores/share/sensores/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
workspace/vision/sensores/log/: latest_build
workspace/vision/sensores/sensores/: hazmat.py  object_tracker.py  qr.py  sensors_master.py
workspace/vision/sensores/sensores/install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
workspace/vision/sensores/sensores/log/: latest_build
(+80 files in other folders)
