<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>teleoperation</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="edidier11@outlook.com">/</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- c++ dependencies -->
  <depend>websocketpp</depend>
  <depend>libboost-dev</depend>

  <depend>rclpy</depend>
  <depend>rclcpp</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- ROS message dependencies -->
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <!-- launch -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- Python dependencies for WebRTC server -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-aiohttp</exec_depend>
  <exec_depend>python3-websockets</exec_depend>
  
  <!-- System dependencies for audio -->
  <exec_depend>alsa-utils</exec_depend>
  
  <!-- Remove old pyaudio dependency since we use ALSA directly -->
  <!-- <exec_depend>pyaudio</exec_depend> -->
  <exec_depend>sockets</exec_depend>
  <exec_depend>wave</exec_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
